Refatorar controladores e serviços de produto; remover arquivos obsoletos
- Atualiza GetProductsByStoreController para usar GetProductsService.
- Remove os controladores GetStockByStoreAndProductController e GetStockByStoreController.
- Remove os serviços GetProductsByStoreService e GetStockService.
- Atualiza as rotas para refletir as mudanças de endpoints e namespaces.
- Adiciona documentação Swagger para o endpoint de obter produto por ID.
