# routes/api.php
@@ -5,9 +5,10 @@ use App\Http\Controllers\Auth\LogoutController;
 use App\Http\Controllers\Auth\RegisterController;
 use App\Http\Controllers\Auth\UserMeController;
 use App\Http\Controllers\ClientController;
+use App\Http\Controllers\Product\GetProductsByIdController;
 use App\Http\Controllers\Product\GetProductsByStoreController;
-use App\Http\Controllers\Product\GetStockByStoreAndProductController;
-use App\Http\Controllers\Product\GetStockByStoreController;
+use App\Http\Controllers\Stock\GetStockByStoreAndProductController;
+use App\Http\Controllers\Stock\GetStockByStoreController;
 use App\Http\Controllers\ProductController;
 use App\Http\Controllers\ProductPriceController;
 use App\Http\Controllers\SaleController;
@@ -45,9 +46,11 @@ Route::middleware('auth:sanctum')->group(function () {
 
     Route::resource('produto', ProductController::class);
 
-    Route::get('produto/getproductsbystore/{store}', GetProductsByStoreController::class)->name('product.getByStore');
-    Route::get('produto/getstockbystore/{store}', action: GetStockByStoreController::class)->name('product.getstockbystore');
-    Route::get('produto/getstockbystoreandproduct/{store_id}/{product_id}', action: GetStockByStoreAndProductController::class)->name('product.getstockbystoreandproduct');
+    Route::get('product/getproductsbystore/{store}', GetProductsByStoreController::class)->name('product.getproductsbystore');
+    Route::get('product/getproductsbyid/{product}', GetProductsByIdController::class)->name('product.getproductsbyid');
+    
+    Route::get('stock/getstockbystore/{store}', action: GetStockByStoreController::class)->name('product.getstockbystore');
+    Route::get('stock/getstockbystoreandproduct/{store}/{product}', action: GetStockByStoreAndProductController::class)->name('product.getstockbystoreandproduct');
 
 
     Route::resource('priceproduct', ProductPriceController::class);
